projects/zhangyongqiao/k8s/services/maven/nexus.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3
          imagePullPolicy: IfNotPresent
          ports:
            -  containerPort: 8081
            -  containerPort: 8082
            -  containerPort: 8083
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-data-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: nexus-svc
spec:
  selector:
    app: nexus
  type: NodePort
  ports:
    - name: web
      protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30881
    - name: docker
      protocol: TCP
      port: 8082
      targetPort: 8082
      nodePort: 30882
    - name: maven
      protocol: TCP
      port: 8083
      targetPort: 8083
      nodePort: 30883

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-maven
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host:  maven.zhangyongqiao.com
      http:
        paths:
          - path:  /
            pathType: Prefix
            backend:
              service:
                name: nexus-svc
                port:
                  number: 8081
